--- a/templates/index.html
+++ b/templates/index.html
@@ -3,32 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esse gato sou eu</title>
+    <link rel="stylesheet" href="../static/style.css">
+    <title>Esse gato sou eu!</title>
 </head>
 <body>
     <header>
-        <img src="" alt="logo">
         <h1>Esse gato sou eu</h1>
     </header>
     <main>
         <div class="container">
             <div class="form">
                 <form action="/" method="post">
-                    <label>Informe seu nome:</label>
-                    <input type="text" name="nome" required>
+                    <label>Informe seu nome</label>
+                    <input type="text" name="nome" />
                     <button type="submit">Enviar</button>
                 </form>
             </div>
             <div class="gato">
-                <img src="" alt="Gato">
                 {% if not url_imagem %}
-                    <img src="..." alt="...">
+                    <img src="..." alt="..." />
                 {% else %}
-                    <img src="{{ url_imagem }}"/>
-                    <p>{{nome}}</p>
+                    <img src="{{url_imagem}}" />
+                    <p>{{ nome }}</p>
                 {% endif %}
                 {% if erro %}
-                    <p>{{erro}}</p>
+                    <p>{{ erro }}</p>
                 {% endif %}
             </div>
         </div>
